--- a/exercises/Client-Navbars/index.html
+++ b/exercises/Client-Navbars/index.html
@@ -13,10 +13,17 @@
                     <h1>Sculptor's Haven</h1>
                 </a>
                 <a>Gallery</a>
-                <a>Content</a>
+                <a>Contact</a>
             </div>
             <div id="layout">
-                <a id="sculpt-image"></a>
+                <a id="sculpt-image" alt="hands sculpting clay"></a>
+            </div>
+            <div id="footer">
+                <div>
+                    <a href="navbar-2.html">
+                        Click here to visit AngelEars Website
+                    </a>
+                </div>
             </div>
         </div>
     </body>
