--- a/exercises/Client-Navbars/navbar-2.html
+++ b/exercises/Client-Navbars/navbar-2.html
@@ -15,9 +15,16 @@
                 <a>News</a>
                 <a>Editorials</a>
                 <a>Media</a>
-                <a class="cta-button">SUBSCRIBE NOW</a>
+                <a href="#" class="cta-button">SUBSCRIBE NOW</a>
             </div>
             <div id="mag-image"></div>
+            <div id="Secondfooter">
+                <div>
+                    <a href="navbar-3.html">
+                        Click here to visit Tailored Spooks Website
+                    </a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
