--- a/exercises/Client-Navbars/navbar-3.html
+++ b/exercises/Client-Navbars/navbar-3.html
@@ -17,7 +17,28 @@
                 <a>orders</a>
                 <a class="cta-button">SIGN IN</a>
             </div>
-            <div id="spook-image"></div>
+            <div id="spook-bottom">
+                <a>New Arrivals</a>
+                <a>Costumes</a>
+                <a>Accessories</a>
+                <a>Decorations</a>
+                <a>Animatronics</a>
+                <a>On Sale</a>
+            </div>
+            <div id="spook-image">
+                <div class="spook-content">
+                    <h1>BOGO 50% off on select costumes</h1>
+                    <h4>Use code: BOGO50</h4>
+                    <a>Shop Now</a>
+                </div>
+            </div>
+            <div id="thirdfooter">
+                <div>
+                    <a href="index.html">
+                        Click here to visit Sculptor's Haven Website
+                    </a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
