--- a/exercises/hover-galleries/index.html
+++ b/exercises/hover-galleries/index.html
@@ -43,7 +43,7 @@
         </div>
         <div id="second-container">
             <div class="cardpart2">
-                <h2>This is card 1</h2>
+                <h2>Card Uno</h2>
                 <div class="card-content">
                     <p>
                         Lorem ipsum dolor sit 
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="cardpart2">
-                <h2>This is card 2</h2>
+                <h2>Card Dos</h2>
                 <div class="card-content">
                     <p>
                         Lorem ipsum dolor sit 
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="cardpart2">
-                <h2>This is card 3</h2>
+                <h2>Card Tres</h2>
                 <div class="card-content">
                     <p>
                         Lorem ipsum dolor sit 
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="cardpart2">
-                <h2>This is card 4</h2>
+                <h2>Card Quatro</h2>
                 <div class="card-content">
                     <p>
                         Lorem ipsum dolor sit 
@@ -100,60 +100,80 @@
             </div>
         </div>
         <div id="third-container">
-            <div class="cardpart3">
-                <h2>This is card 1</h2>
-                <div class="card-content">
-                    <p>
-                        Lorem ipsum dolor sit 
-                        amet consectetur adipisicing elit. 
-                        Accusamus veniam rem enim doloribus esse, harum 
-                        voluptas sint, culpa amet neque iure tempora quasi 
-                        provident ducimus ab? Consequuntur iste 
-                        repudiandae eum?
-                    </p>
-                    <a href="#">LEARN MORE</a>
+            <div id="gal3-1" class="cardpart3">
+                <div class="card-front"></div>
+                <div class="card-back">
+                    <h2>This is Card 1</h2>
+                    <div class="card-content">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur 
+                            adipisicing 
+                            elit. Repudiandae maiores molestias officia 
+                            temporibus 
+                            tempore accusantium veniam, recusandae ipsum 
+                            tempora 
+                            sapiente sed necessitatibus soluta fugit sint. 
+                            Reiciendis delectus perferendis eius fugit?
+                        </p>
+                        <a href="#">LEARN MORE</a>
+                    </div>
                 </div>
             </div>
-            <div class="cardpart3">
-                <h2>This is card 2</h2>
-                <div class="card-content">
-                    <p>
-                        Lorem ipsum dolor sit 
-                        amet consectetur adipisicing elit. 
-                        Accusamus veniam rem enim doloribus esse, harum 
-                        voluptas sint, culpa amet neque iure tempora quasi 
-                        provident ducimus ab? Consequuntur iste 
-                        repudiandae eum?
-                    </p>
-                    <a href="#">LEARN MORE</a>
+            <div id="gal3-2" class="cardpart3">
+                <div class="card-front"></div>
+                <div class="card-back">
+                    <h2>This is Card 2</h2>
+                    <div class="card-content">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur 
+                            adipisicing 
+                            elit. Repudiandae maiores molestias officia 
+                            temporibus 
+                            tempore accusantium veniam, recusandae ipsum 
+                            tempora 
+                            sapiente sed necessitatibus soluta fugit sint. 
+                            Reiciendis delectus perferendis eius fugit?
+                        </p>
+                        <a href="#">LEARN MORE</a>
+                    </div>
                 </div>
             </div>
-            <div class="cardpart3">
-                <h2>This is card 3</h2>
-                <div class="card-content">
-                    <p>
-                        Lorem ipsum dolor sit 
-                        amet consectetur adipisicing elit. 
-                        Accusamus veniam rem enim doloribus esse, harum 
-                        voluptas sint, culpa amet neque iure tempora quasi 
-                        provident ducimus ab? Consequuntur iste 
-                        repudiandae eum?
-                    </p>
-                    <a href="#">LEARN MORE</a>
+            <div id="gal3-3" class="cardpart3">
+                <div class="card-front"></div>
+                <div class="card-back">
+                    <h2>This is Card 3</h2>
+                    <div class="card-content">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur 
+                            adipisicing 
+                            elit. Repudiandae maiores molestias officia 
+                            temporibus 
+                            tempore accusantium veniam, recusandae ipsum 
+                            tempora 
+                            sapiente sed necessitatibus soluta fugit sint. 
+                            Reiciendis delectus perferendis eius fugit?
+                        </p>
+                        <a href="#">LEARN MORE</a>
+                    </div>
                 </div>
             </div>
-            <div class="cardpart3">
-                <h2>This is card 4</h2>
-                <div class="card-content">
-                    <p>
-                        Lorem ipsum dolor sit 
-                        amet consectetur adipisicing elit. 
-                        Accusamus veniam rem enim doloribus esse, harum 
-                        voluptas sint, culpa amet neque iure tempora quasi 
-                        provident ducimus ab? Consequuntur iste 
-                        repudiandae eum?
-                    </p>
-                    <a href="#">LEARN MORE</a>
+            <div id="gal3-4" class="cardpart3">
+                <div class="card-front"></div>
+                <div class="card-back">
+                    <h2>This is Card 4</h2>
+                    <div class="card-content">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur 
+                            adipisicing 
+                            elit. Repudiandae maiores molestias officia 
+                            temporibus 
+                            tempore accusantium veniam, recusandae ipsum 
+                            tempora 
+                            sapiente sed necessitatibus soluta fugit sint. 
+                            Reiciendis delectus perferendis eius fugit?
+                        </p>
+                        <a href="#">LEARN MORE</a>
+                    </div>
                 </div>
             </div>
         </div>
