--- a/exercises/Client-Navbars/index.html
+++ b/exercises/Client-Navbars/index.html
@@ -12,18 +12,11 @@
                 <a id="logo">
                     <h1>Sculptor's Haven</h1>
                 </a>
-                <a>Gallery</a>
-                <a>Contact</a>
+                <a href="navbar-2.html">Gallery</a>
+                <a href="navbar-2.html">Contact</a>
             </div>
             <div id="layout">
                 <a id="sculpt-image" alt="hands sculpting clay"></a>
-            </div>
-            <div id="footer">
-                <div>
-                    <a href="navbar-2.html">
-                        Click here to visit AngelEars Website
-                    </a>
-                </div>
             </div>
         </div>
     </body>
