--- a/exercises/Client-Navbars/navbar-2.html
+++ b/exercises/Client-Navbars/navbar-2.html
@@ -12,19 +12,12 @@
                 <a id="logo">
                     <h1>AngelEars</h1>
                 </a>
-                <a>News</a>
-                <a>Editorials</a>
-                <a>Media</a>
-                <a href="#" class="cta-button">SUBSCRIBE NOW</a>
+                <a href="navbar-3.html">News</a>
+                <a href="navbar-3.html">Editorials</a>
+                <a href="navbar-3.html">Media</a>
+                <a href="navbar-3.html" class="cta-button">SUBSCRIBE NOW</a>
             </div>
             <div id="mag-image"></div>
-            <div id="Secondfooter">
-                <div>
-                    <a href="navbar-3.html">
-                        Click here to visit Tailored Spooks Website
-                    </a>
-                </div>
-            </div>
         </div>
     </body>
 </html>
