--- a/exercises/Client-Navbars/navbar-3.html
+++ b/exercises/Client-Navbars/navbar-3.html
@@ -7,37 +7,29 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
+        <div id="spook-content">
+            <h4>BOGO 50% off on select costumes use code: "BOGO50"</h4>
+            <a href="index.html">Shop Now</a>
+        </div>
         <div id="spook-header">
             <div id="spook-navbar">
                 <a id="logo">
                     <h1>Tailored Spooks</h1>
                 </a>
-                <a>Jobs</a>
-                <a>Blogs</a>
-                <a>orders</a>
-                <a class="cta-button">SIGN IN</a>
+                <a href="index.html">Jobs</a>
+                <a href="index.html">Blogs</a>
+                <a href="index.html">orders</a>
+                <a href="index.html"class="cta-button">SIGN IN</a>
             </div>
             <div id="spook-bottom">
-                <a>New Arrivals</a>
-                <a>Costumes</a>
-                <a>Accessories</a>
-                <a>Decorations</a>
-                <a>Animatronics</a>
-                <a>On Sale</a>
+                <a href="index.html">New Arrivals</a>
+                <a href="index.html">Costumes</a>
+                <a href="index.html">Accessories</a>
+                <a href="index.html">Decorations</a>
+                <a href="index.html">Animatronics</a>
+                <a href="index.html">On Sale</a>
             </div>
             <div id="spook-image">
-                <div class="spook-content">
-                    <h1>BOGO 50% off on select costumes</h1>
-                    <h4>Use code: BOGO50</h4>
-                    <a>Shop Now</a>
-                </div>
-            </div>
-            <div id="thirdfooter">
-                <div>
-                    <a href="index.html">
-                        Click here to visit Sculptor's Haven Website
-                    </a>
-                </div>
             </div>
         </div>
     </body>
