--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -12,44 +12,46 @@
             <h4>Ashley Londono</h4>
             <a href="gallery-page.html">Go to Gallery</a>
         </div>
-        <div class="card">
-            <img
-                src="images/Abstract_Re-Imagined.jpg"
-                alt="projects"
-            >
-            <h2>Gallery Page</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Facere ratione laudantium quos, aliquam nesciunt tempore 
-                eveniet.
-            </p>
-            <a href="gallery-page.html">view</a>
-        </div>
-        <div class="card">
-            <img
-                src="images/Abstract_Re-Imagined.jpg"
-                alt="projects"
-            >
-            <h2>Gallery Page</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Facere ratione laudantium quos, aliquam nesciunt tempore 
-                eveniet.
-            </p>
-            <a href="gallery-page.html">view</a>
-        </div>
-        <div class="card">
-            <img
-                src="images/Abstract_Re-Imagined.jpg"
-                alt="projects"
-            >
-            <h2>Gallery Page</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Facere ratione laudantium quos, aliquam nesciunt tempore 
-                eveniet.
-            </p>
-            <a href="gallery-page.html">view</a>
+        <div class="cards-space">
+            <div class="card">
+                <img
+                    src="images/Abstract_Re-Imagined.jpg"
+                    alt="projects"
+                >
+                <h2>Gallery Page</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Facere ratione laudantium quos, aliquam nesciunt tempore 
+                    eveniet.
+                </p>
+                <a href="gallery-page.html">view</a>
+            </div>
+            <div class="card">
+                <img
+                    src="images/Abstract_Re-Imagined.jpg"
+                    alt="projects"
+                >
+                <h2>Gallery Page</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Facere ratione laudantium quos, aliquam nesciunt tempore 
+                    eveniet.
+                </p>
+                <a href="gallery-page.html">view</a>
+            </div>
+            <div class="card">
+                <img
+                    src="images/Abstract_Re-Imagined.jpg"
+                    alt="projects"
+                >
+                <h2>Gallery Page</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Facere ratione laudantium quos, aliquam nesciunt tempore 
+                    eveniet.
+                </p>
+                <a href="gallery-page.html">view</a>
+            </div>
         </div>
     </body>
 </html>
