--- a/projects/dropdown-menu-site/index.html
+++ b/projects/dropdown-menu-site/index.html
@@ -25,6 +25,11 @@
                     <a href="#">Donate</a>
                     </div>
                 </div>
+                <div class="spacer">
+                    <div id="hero-1">
+                        <div class="hero-content"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
