--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -8,9 +8,11 @@
     </head>
     <body>
         <div id="hero-1">
-            <h1>Portfolio</h1>
-            <h4>Ashley Londono</h4>
-            <a href="gallery-page.html">Go to Gallery</a>
+            <div class="hero-content">
+                <h1>Porfolio Website</h1>
+                <h2>By Ashley Londono</h2>
+                <div class="spacer"></div>
+            </div>
         </div>
         <div class="cards-space">
             <div class="card">
