dropdown-menu-web

--- a/projects/dropdown-menu-site/Charlie.html
+++ b/projects/dropdown-menu-site/Charlie.html
@@ -9,7 +9,10 @@
     </head>
     <body>
         <div id="navbar">
-            <a id="logo" href="#">AdoptMePlz</a>
+            <a id="logo" href="index.html">
+                AdoptMePlz
+                <i class="fa-solid fa-paw"></i>
+            </a>
             <div class="dropdown-container">
                 <a href="#">Adopt<i class="fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
@@ -25,10 +28,23 @@
                     <a href="#">Donate</a>
                 </div>
             </div>
-                <div id="hero-1">
-                    <div class="hero-content"></div>
-                </div>
-            </div>
+        <div id="layout">
+            <h2>Charlie</h2>
+            <img
+                src="images/grey-cat.jpg"
+                alt="grey cat looking up"
+            >
+            <p>
+                Hi, My name is Charlie, I am 3 years old, brother of Quicny,
+                I am very well behaved I sometimes get scared with 
+                loud noises but am a very loving boy. I was born without 
+                one leg but feel capable of anything, except scratches, 
+                I want lots of scratches.  
+            </p>
+            <a href="#">
+                Click here to learn more!
+                <i class="fa-solid fa-paw"></i>
+            </a>
         </div>
     </body>
 </html>
