--- a/projects/dropdown-menu-site/Lance.html
+++ b/projects/dropdown-menu-site/Lance.html
@@ -9,7 +9,10 @@
     </head>
     <body>
         <div id="navbar">
-            <a id="logo" href="#">AdoptMePlz</a>
+            <a id="logo" href="index.html">
+                AdoptMePlz
+                <i class="fa-solid fa-paw"></i>
+            </a>
             <div class="dropdown-container">
                 <a href="#">Adopt<i class="fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
@@ -25,10 +28,20 @@
                     <a href="#">Donate</a>
                 </div>
             </div>
-                <div id="hero-1">
-                    <div class="hero-content"></div>
-                </div>
-            </div>
+        <div id="layout">
+            <h2>Lance</h2>
+            <img
+                src="images/dog.jpg"
+                alt="labrador in a harness"
+            >
+            <p>
+                Hi, My name is Lance, I am 4 years old, I like walks around
+                the neighborhood and scratches on my neck. 
+            </p>
+            <a href="#">
+                Click here to learn more!
+                <i class="fa-solid fa-paw"></i>
+            </a>
         </div>
     </body>
 </html>
