--- a/projects/dropdown-menu-site/Quincy.html
+++ b/projects/dropdown-menu-site/Quincy.html
@@ -9,7 +9,10 @@
     </head>
     <body>
         <div id="navbar">
-            <a id="logo" href="#">AdoptMePlz</a>
+            <a id="logo" href="index.html">
+                AdoptMePlz
+                <i class="fa-solid fa-paw"></i>
+            </a>
             <div class="dropdown-container">
                 <a href="#">Adopt<i class="fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
@@ -25,10 +28,22 @@
                     <a href="#">Donate</a>
                 </div>
             </div>
-                <div id="hero-1">
-                    <div class="hero-content"></div>
-                </div>
-            </div>
+        <div id="layout">
+            <h2>Quincy</h2>
+            <img
+                src="images/tan-cat.jpg"
+                alt="grey cat looking up"
+            >
+            <p>
+                Hi, My name is Quincy, I am 3 years old, brother of Charlie,
+                I am very well behaved, playful and often search for a lot of 
+                attention. you can call me garfield because my favorite 
+                words are "meal time!"
+            </p>
+            <a href="#">
+                Click here to learn more!
+                <i class="fa-solid fa-paw"></i>
+            </a>
         </div>
     </body>
 </html>
