--- a/projects/portfolio/gallery-page.html
+++ b/projects/portfolio/gallery-page.html
@@ -7,6 +7,64 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        
+        <h1>
+            Gallery page
+        </h1>
+        <a href="index.html">Go back to homepage</a>
+            <div class="horizontal-masonry-gallery">
+                <img 
+                    src="images/Architectural-Illustration-Project.jpg" 
+                    alt="yellow tower"
+                >
+                <img 
+                    src="images/olay-skincare.jpg" 
+                    alt="floral olay cream"
+                >
+                <img 
+                    src="images/National_park_rabbit.jpg" 
+                    alt="national park art rabbit"
+                >
+                <img 
+                    src="images/C-_Users_ashle_Downloads_gucci-gif-ad_PhotoshopAnimationProjectPart3_GUCCI_02_6020_ALONDONO.gif" 
+                    alt="model gucci"
+                >
+                <img 
+                    src="images/olay-model.jpg" 
+                    alt="olay cream model"
+                >
+                <img 
+                    src="images/PhotoshopAnimationProjectPart3_Gucci_01_6020_ALondono.gif" 
+                    alt="Gucci perfume bottle gif"
+                >
+                <img 
+                    src="images/MockupExercise(1)_103_Alondono.jpg" 
+                    alt="gucci sign in a parking lot"
+                >
+                <img 
+                    src="images/MockupExercise(2)_103_ALondono.jpg" 
+                    alt="gucci magazine image"
+                >
+                <img 
+                    src="images/Creative_Portrait_Project.jpg" 
+                    alt="Adobe illustrator painting portrait of pretty afro woman"
+                >
+                <img 
+                    src="images/olay-candles.jpg" 
+                    alt="olay cream spa"
+                >
+                <img 
+                    src="images/Book_Cover_Project.jpg" 
+                    alt="adobe illustrator childrens book cover"
+                >
+                <img 
+                    src="images/Photography-Collage-Robot-Toy.jpg" 
+                    alt="robot toy"
+                >
+                <img 
+                    src="images/PhotoshopAnimationProjectPart3_CREATIVEAD_6020_ALONDONO.gif" 
+                    alt="janitor logo gif"
+                >
+            </div>
+        </div>
     </body>
 </html>
