--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -7,53 +7,56 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div id="hero-1">
-            <div class="hero-content">
-                <h1>Porfolio Website</h1>
-                <h2>By Ashley Londono</h2>
-                <div class="spacer"></div>
+        <div id="First-background">
+            <div id="hero-1">
+                <div class="hero-content">
+                    <h1>Porfolio Website</h1>
+                    <h2>By Ashley Londono</h2>
+                    <a href="gallery-page.html">View Gallery</a>
+                </div>
             </div>
-        </div>
-        <div class="cards-space">
-            <div class="card">
-                <img
-                    src="images/Abstract_Re-Imagined.jpg"
-                    alt="projects"
-                >
-                <h2>Gallery Page</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Facere ratione laudantium quos, aliquam nesciunt tempore 
-                    eveniet.
-                </p>
-                <a href="gallery-page.html">view</a>
+            <div id="content-container">
+            <div class="cards-space">
+                <div class="card">
+                    <img
+                        src="images/Abstract_Re-Imagined.jpg"
+                        alt="projects"
+                    >
+                    <h2>Gallery Page</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facere ratione laudantium quos, aliquam nesciunt tempore 
+                        eveniet.
+                    </p>
+                    <a href="gallery-page.html">view</a>
+                </div>
+                <div class="card">
+                    <img
+                        src="images/Abstract_Re-Imagined.jpg"
+                        alt="projects"
+                    >
+                    <h2>About Me Page</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facere ratione laudantium quos, aliquam nesciunt tempore 
+                        eveniet.
+                    </p>
+                    <a href="#">view</a>
+                </div>
+                <div class="card">
+                    <img
+                        src="images/Abstract_Re-Imagined.jpg"
+                        alt="projects"
+                    >
+                    <h2>Contact Page</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facere ratione laudantium quos, aliquam nesciunt tempore 
+                        eveniet.
+                    </p>
+                    <a href="#">view</a>
+                </div>
             </div>
-            <div class="card">
-                <img
-                    src="images/Abstract_Re-Imagined.jpg"
-                    alt="projects"
-                >
-                <h2>Gallery Page</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Facere ratione laudantium quos, aliquam nesciunt tempore 
-                    eveniet.
-                </p>
-                <a href="gallery-page.html">view</a>
-            </div>
-            <div class="card">
-                <img
-                    src="images/Abstract_Re-Imagined.jpg"
-                    alt="projects"
-                >
-                <h2>Gallery Page</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Facere ratione laudantium quos, aliquam nesciunt tempore 
-                    eveniet.
-                </p>
-                <a href="gallery-page.html">view</a>
-            </div>
-        </div>
+        <div>
     </body>
 </html>
