--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -35,7 +35,7 @@
                         src="images/Abstract_Re-Imagined.jpg"
                         alt="projects"
                     >
-                    <h2>About Me Page</h2>
+                    <h2>About Me</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Facere ratione laudantium quos, aliquam nesciunt tempore 
