--- a/projects/restaurant/index.html
+++ b/projects/restaurant/index.html
@@ -11,63 +11,101 @@
             <div id="navbar-top">
                 <div class="content-column">
                     <a href="#" id="logo">
-                        <img src="images/first-logo-hdr.webp" alt="logo">
+                        <img src="images/GW-paisaje.jpg" alt="logo">
                     </a>
                     <div>
-                        <a href="#">Link 1</a>
-                        <a href="#">Link 2</a>
-                        <a href="#">Link 3</a>
+                        <a href="#">HOME</a>
+                        <a href="#">LOCATION & HOURS</a>
+                        <a href="#">LOYALTY </a>
                     </div>
-                    <a href="#" class="cta-buttom">Sign up</a>
+                    <a href="#" class="cta-buttom">Order Now</a>
                 </div>
             </div>
             <div id="navbar-bottom">
                 <div class="content-column">
-                    <a href="#">Lower link 1</a>
-                    <a href="#">Lower link 2</a>
-                    <a href="#">Lower link 3</a>
-                    <a href="#">Lower link 4</a>
-                    <a href="#">Lower link 5</a>
+                    <a href="#">MENU</a>
+                    <a href="#">SHOP</a>
+                    <a href="#">GIFT CARDS</a>
+                    <a href="#">ABOUT US</a>
+                    <a href="#">CONTACT US</a>
                 </div>
             </div>
         </div>
-        <div id="layout">
-            <h1>El Paisaje</h1>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Asperiores laborum perspiciatis repellat corporis enim. 
-                Asperiores consectetur architecto nobis deleniti 
-                blanditiis quisquam in provident perspiciatis non! 
-                Et beatae ullam porro voluptatum.
-            </p>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Asperiores laborum perspiciatis repellat corporis enim. 
-                Asperiores consectetur architecto nobis deleniti 
-                blanditiis quisquam in provident perspiciatis non! 
-                Et beatae ullam porro voluptatum.
-            </p>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Asperiores laborum perspiciatis repellat corporis enim. 
-                Asperiores consectetur architecto nobis deleniti 
-                blanditiis quisquam in provident perspiciatis non! 
-                Et beatae ullam porro voluptatum.
-            </p>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Asperiores laborum perspiciatis repellat corporis enim. 
-                Asperiores consectetur architecto nobis deleniti 
-                blanditiis quisquam in provident perspiciatis non! 
-                Et beatae ullam porro voluptatum.
-            </p>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Asperiores laborum perspiciatis repellat corporis enim. 
-                Asperiores consectetur architecto nobis deleniti 
-                blanditiis quisquam in provident perspiciatis non! 
-                Et beatae ullam porro voluptatum.
-            </p>
+            <div id="hero-1">
+                <div class="hero-content">
+                    <h2>Try Out Our Traditional Cuisine </h2>
+                    <h4>
+                        Savor the Flavor with our popular
+                        Bandeja Paisa
+                    </h4>
+                    <div>
+                        <a href="#">ORDER NOW</a>
+                        <a href="#">MAKE A RESERVATION</a>
+                    </div>
+                </div>
+            </div>
+            <div class="section">
+                <div class="single-column">
+                    
+                    <!---Content Layout Container-->
+                    <div class="side-by-side">
+                        <div class="image-container">
+                            <img
+                            src="images/hamburger.jpg"
+                            alt="colombian hamburger"
+                            >
+                        </div>
+                        <div class="text-container">
+                           <h3>
+                                high protien cereal to power your days.
+                           </h3>
+                           <a href="#">BURGERS</a>
+                        </div>
+                    </div>
+                    <div class="side-by-side">
+                        <div class="text-container">
+                           <h3>
+                                A whole world of flavor.
+                           </h3>
+                           <a href="#">APPETIZERS</a>
+                        </div>
+                        <div class="image-container">
+                            <img
+                            src="images/Colombian-Buñuelos-Recipe.jpg"
+                            alt="colombian buñuelos"
+                            >
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="content-container">
+                <div class="three-cards">
+                    <div class="card">
+                        <h3>APPETIZERS</h3>
+                        <img
+                            src="images/colombian-empanadas.jpg"
+                            alt="colombian empanadas"
+                        >
+                        <a href="#">VIEW</a>
+                    </div>
+                    <div class="card">
+                        <h3>DAILY SOUPS</h3>
+                        <img 
+                            src="images/Colombian-chicken-soup.jpg"
+                            alt="chicken soup"
+                        >
+                        <a href="#">VIEW</a>
+                    </div>
+                    <div class="card">
+                        <h3>DESSERTS</h3>
+                        <img
+                            src="images/chocoflan.jpg"
+                            alt="colombian empanadas"
+                        >
+                        <a href="#">VIEW</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
