--- a/projects/restaurant/index.html
+++ b/projects/restaurant/index.html
@@ -18,12 +18,12 @@
                         <a href="#">LOCATION & HOURS</a>
                         <a href="#">LOYALTY </a>
                     </div>
-                    <a href="#" class="cta-buttom">Order Now</a>
+                    <a href="menu-page.html" class="cta-buttom">Order Now</a>
                 </div>
             </div>
             <div id="navbar-bottom">
                 <div class="content-column">
-                    <a href="#">MENU</a>
+                    <a href="menu-page.html">MENU</a>
                     <a href="#">SHOP</a>
                     <a href="#">GIFT CARDS</a>
                     <a href="#">ABOUT US</a>
@@ -39,15 +39,13 @@
                         Bandeja Paisa
                     </h4>
                     <div>
-                        <a href="#">ORDER NOW</a>
+                        <a href="menu-page.html">ORDER NOW</a>
                         <a href="#">MAKE A RESERVATION</a>
                     </div>
                 </div>
             </div>
             <div class="section">
                 <div class="single-column">
-                    
-                    <!---Content Layout Container-->
                     <div class="side-by-side">
                         <div class="image-container">
                             <img
