--- a/exercises/grrm/index.html
+++ b/exercises/grrm/index.html
@@ -11,7 +11,7 @@
             <div id="top-left-accent"></div>
             <div id="top-right-accent"></div>
             <div id="header">
-                <a href="#" id="shield-image">
+                <a href="#" id="shield-imag">
                     <img src="images/shield-spin.jpg" alt="shield">
                 </a>
                 <h1>GEORGE R.R. MARTIN</h1>
