--- a/projects/restaurant/index.html
+++ b/projects/restaurant/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <div id="header">
@@ -44,6 +45,7 @@
                     </div>
                 </div>
             </div>
+            <div class="spacer"></div>
             <div class="section">
                 <div class="single-column">
                     <div class="side-by-side">
@@ -55,7 +57,7 @@
                         </div>
                         <div class="text-container">
                            <h3>
-                                high protien cereal to power your days.
+                                High Protien Burgers.
                            </h3>
                            <a href="#">BURGERS</a>
                         </div>
@@ -63,7 +65,7 @@
                     <div class="side-by-side">
                         <div class="text-container">
                            <h3>
-                                A whole world of flavor.
+                                Crispy Goodness.
                            </h3>
                            <a href="#">APPETIZERS</a>
                         </div>
@@ -76,6 +78,7 @@
                     </div>
                 </div>
             </div>
+            <div class="spacer"></div>
             <div id="content-container">
                 <div class="three-cards">
                     <div class="card">
@@ -103,6 +106,59 @@
                         <a href="#">VIEW</a>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="spacer"></div>
+        <div class="footer">
+            <div class="footer-columns-navbar">
+                <div>
+                    <h3>MENU</h3>
+                    <hr>
+                    <a href="#">Column 1 Link</a>
+                    <a href="#">Column 1 Link</a>
+                    <a href="#">Column 1 Link</a>
+                    <a href="#">Column 1 Link</a>
+                    <a href="#">Column 1 Link</a>
+                </div>
+                <div>
+                    <h3>HOURS</h3>
+                    <hr>
+                    <a href="#">Column 2 Link</a>
+                    <a href="#">Column 2 Link</a>
+                    <a href="#">Column 2 Link</a>
+                    <a href="#">Column 2 Link</a>
+                </div>
+                <div>
+                    <h3>CONTACT INFORMATION</h3>
+                    <hr>
+                    <a href="#">
+                        Address
+                        XXX Lorem St,<br>
+                        Lowell, MA 01850
+                    </a>
+                    <a href="#">
+                        Phone <br>
+                        (978) 000-0000
+                    </a>
+                    <a>
+                        Email<br>
+                        Paisaje@ElPaisaje.com
+                    </a>
+                </div>
+                <div>
+                    <h3>FOLLOW US</h3>
+                    <hr>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <img src="images/BT-paisaje.jpg">
+                </div>
+            </div>
+            <div class="footer-navbar">
+                <span>&copy; EL PAISAJE</span>
+                <a href="#">Footer Link 1</a>
+                <a href="#">Footer Link 2</a>
+                <a href="#">Footer Link 3</a>
+                <a href="#">Footer Link 4</a>
             </div>
         </div>
     </body>
