--- a/projects/restaurant/menu-page.html
+++ b/projects/restaurant/menu-page.html
@@ -10,7 +10,7 @@
         <div id="header">
             <div id="navbar-top">
                 <div class="content-column">
-                    <a href="#" id="logo">
+                    <a href="index.html" id="logo">
                         <img src="images/GW-paisaje.jpg" alt="logo">
                     </a>
                     <div>
@@ -31,24 +31,25 @@
                 </div>
             </div>
         </div>
-            <div id="hero-1">
-                <div class="hero-content">
-                    <h2>Featured Dish Only $17.50</h2>
-                    <h4>
-                        Savor the Flavor with our popular
-                        Bandeja Paisa 
-                    </h4>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing 
-                        elit. Impedit, totam veniam optio porro neque ipsum ea 
-                        exercitationem voluptate. Qui ullam corporis sit 
-                        assumenda consequatur optio libero ipsam ex deserunt 
-                        dolore.
-                    </p>
-                    <div>
-                        <a href="menu-page.html">ORDER NOW</a>
-                    </div>
+        <div id="hero-2">
+            <div id="hero-content-2">
+                <h2>Featured Dish Only $15.00</h2>
+                <h4>
+                    Savor the Flavor with our popular
+                    Stuffed Arepas
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing 
+                    elit. Impedit, totam veniam optio porro neque ipsum ea 
+                    exercitationem voluptate. Qui ullam corporis sit 
+                    assumenda consequatur optio libero ipsam ex deserunt 
+                    dolore.
+                </p>
+                <div>
+                    <a href="menu-page.html">ORDER NOW</a>
                 </div>
             </div>
+        </div>
+        <div class="spacer"></div>
     </body>
 </html>
